--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,7 @@
               "src/styles.css"
             ],
             "server": "src/main.server.ts",
-            "outputMode": "static",
+            "outputMode": "server",
             "ssr": {
               "entry": "src/server.ts"
             }
@@ -44,8 +44,7 @@
                   "maximumError": "40kB"
                 }
               ],
-              "outputHashing": "all",
-              "baseHref": "/UI/"
+              "outputHashing": "all"
             },
             "development": {
               "optimization": false,
